test/data/syntax-errors/bad-expr-in-assignment.derp
nom x derp
x = dile + 2 derp
